--- a/Destapa-Cañerias/Destapaciones-de-cloacas-zona-sur.html
+++ b/Destapa-Cañerias/Destapaciones-de-cloacas-zona-sur.html
@@ -138,7 +138,12 @@ Destapaciones de cloacas zona sur - Remedios caseros para destapar tuberias
 		  <!--TotalPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Plaza-de-las-estrellas.html">Plaza de las estrellas </a> 
+       <a href="../Servicios/Cocina-mabe-4-quemadores.html">Cocina mabe 4 quemadores </a> 
+         </li>
+<!--EndPostsList-->
+<!--PostsList-->
+         <li  class="list-inline-item">
+       <a href="../Destapa-Cañerias/Destapaciones-de-cloacas-junin.html">Destapaciones de cloacas junin </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
@@ -148,17 +153,12 @@ Destapaciones de cloacas zona sur - Remedios caseros para destapar tuberias
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapar-cañerias-casero-vinagre.html">Destapar cañerias casero vinagre </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-Precios.html">Destapaciones Precios </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Remedio-casero-para-destapar-cañerias.html">Remedio casero para destapar cañerias </a> 
-         </li>
-<!--EndPostsList-->
-<!--PostsList-->
-         <li  class="list-inline-item">
-       <a href="../Servicios/Mayoristas-en-zona-sur.html">Mayoristas en zona sur </a> 
+       <a href="../Destapa-Cañerias/Guia-destapacaños-pretul.html">Guia destapacaños pretul </a> 
          </li>
 <!--EndPostsList-->
 
@@ -221,17 +221,27 @@ Destapaciones de cloacas zona sur - Remedios caseros para destapar tuberias
                   <!--TotalRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapación-De-Cañerías.html">Destapación De Cañerías </a> 
+       <a href="../Servicios/Merclin-destapa-cañerias-opiniones.html">Merclin destapa cañerias opiniones </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-De.html">Destapaciones De </a> 
+       <a href="../Servicios/Destapaciones-Cañerias-en-Palermo.html">Destapaciones Cañerias en Palermo </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Como-hacer-para-destapar-el-inodoro-sin-sopapa.html">Como hacer para destapar el inodoro sin sopapa </a> 
+       <a href="../Destapa-Cañerias/Remedios-caseros-para-destapar-cañerias.html">Remedios caseros para destapar cañerias </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Destapa-Cañerias/Destapacaños-liquido-home-depot.html">Destapacaños liquido home depot </a> 
+         </li>			  </div>
+<!--EndRandPosts-->
+<!--RandPosts-->
+             <div id="recent-post">         <li>
+       <a href="../Servicios/Destapaciones-De-Cañerias-en-Palermo.html">Destapaciones De Cañerias en Palermo </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
@@ -241,37 +251,27 @@ Destapaciones de cloacas zona sur - Remedios caseros para destapar tuberias
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-Cerca-De-Mi.html">Destapaciones Cerca De Mi </a> 
+       <a href="../Destapa-Cañerias/Maquina-Para-Destapar-Caños.html">Maquina Para Destapar Caños </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-Emergencias.html">Destapaciones Emergencias </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-De-Inodoros.html">Destapaciones De Inodoros </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Impacto-economico-de-la-plata.html">Impacto economico de la plata </a> 
+       <a href="../Destapa-Cañerias/Como-destapar-la-cañeria-del-baño-con-soda-caustica.html">Como destapar la cañeria del baño con soda caustica </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Como-hacer-destapa-cañerias-liquido.html">Como hacer destapa cañerias liquido </a> 
+       <a href="../Servicios/Destapar-tuberias-de-aguas-servidas.html">Destapar tuberias de aguas servidas </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Destapaciones-de-cañerias-ituzaingo.html">Destapaciones de cañerias ituzaingo </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Merclin-destapa-cañerias-concentrado.html">Merclin destapa cañerias concentrado </a> 
-         </li>			  </div>
-<!--EndRandPosts-->
-<!--RandPosts-->
-             <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Remedios-caseros-para-destapar-cañerias-con-vinagre.html">Remedios caseros para destapar cañerias con vinagre </a> 
+       <a href="../Servicios/Empresa-Destapa-Cañerias-en-Palermo.html">Empresa Destapa Cañerias en Palermo </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 
